leptos_macro/tests/view/13_multiple_generic_params_first_wrong_type.stderr
error[E0277]: `bool` is not a valid type for prop `fun_a` on component `Inner`
  --> tests/view/13_multiple_generic_params_first_wrong_type.rs:11:26
   |
11 |             <Inner fun_a=true fun_b=|| 42/>
   |              ------------^^^^
   |              |           |
   |              |           the trait `Fn()` is not implemented for `bool`
   |              required by a bound introduced by this call
   |
   = note: required: `Fn() -> bool`
note: required for `bool` to implement `__Inner_PropBound_fun_a`
  --> tests/view/13_multiple_generic_params_first_wrong_type.rs:16:1
   |
16 | #[component]
   | ^^^^^^^^^^^^
17 | fn Inner<F, G>(fun_a: F, fun_b: G) -> impl IntoView
   |    ^^^^^
18 | where
19 |     F: Fn() -> bool,
   |        ------------ unsatisfied trait bound introduced here
note: required by a bound in `Inner::__check_fun_a`
  --> tests/view/13_multiple_generic_params_first_wrong_type.rs:17:4
   |
16 | #[component]
   | ------------ required by a bound in this associated function
17 | fn Inner<F, G>(fun_a: F, fun_b: G) -> impl IntoView
   |    ^^^^^ required by this bound in `Inner::__check_fun_a`
   = note: this error originates in the attribute macro `component` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: the method `__finalize` exists for struct `InnerProps<bool, {closure@$DIR/tests/view/13_multiple_generic_params_first_wrong_type.rs:11:37: 11:39}>`, but its trait bounds were not satisfied
  --> tests/view/13_multiple_generic_params_first_wrong_type.rs:11:14
   |
11 |             <Inner fun_a=true fun_b=|| 42/>
   |              ^^^^^ method cannot be called due to unsatisfied trait bounds
...
16 | #[component]
   | ------------ method `__finalize` not found for this struct
   |
note: the following trait bounds were not satisfied:
      `bool: Fn<()>`
      `bool: FnOnce<()>`
  --> tests/view/13_multiple_generic_params_first_wrong_type.rs:19:8
   |
16 | #[component]
   | ------------
...
19 |     F: Fn() -> bool,
   |        ^^^^^^^^^^^^
   |        |       |
   |        |       unsatisfied trait bound introduced here
   |        unsatisfied trait bound introduced here
